[gd_scene load_steps=8 format=3 uid="uid://ojsl5gm3ymfu"]

[ext_resource type="Script" path="res://ui/MyButton.gd" id="1_1lgx0"]
[ext_resource type="FontFile" uid="uid://jefjxcofw5b2" path="res://assets/fonts/NicoClean-Monospaced.ttf" id="1_l31wm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dg5rv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_etfu1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_inkhm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7sg12"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2cofu"]

[node name="MyButton" type="Button"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1119.0
offset_bottom = -625.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 0)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/font_hover_color = Color(0, 0, 0, 0)
theme_override_colors/font_focus_color = Color(0, 0, 0, 0)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 0)
theme_override_fonts/font = ExtResource("1_l31wm")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxEmpty_dg5rv")
theme_override_styles/hover = SubResource("StyleBoxEmpty_etfu1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_inkhm")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_7sg12")
theme_override_styles/focus = SubResource("StyleBoxEmpty_2cofu")
text = "Play"
script = ExtResource("1_1lgx0")
offset_amount = Vector2(-10, 0)

[node name="Label" type="Label" parent="."]
offset_right = 96.0
offset_bottom = 35.0
theme_override_fonts/font = ExtResource("1_l31wm")
theme_override_font_sizes/font_size = 48
text = "Play"

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="focus_entered" from="Label" to="." method="_on_label_focus_entered"]
